Add edit modal with post text

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,19 @@
 button {
   cursor: pointer;
   margin-right: 5px;
+  border: 1px solid;
+  border-radius: 2px;
+  padding: 2px 5px;
+}
+
+.modal__edit {
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.85);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
 }
